headers/core/orxResource.h


/** Misc
 */
#define orxRESOURCE_KC_LOCATION_SEPARATOR                 ':'

#define orxRESOURCE_KZ_DEFAULT_STORAGE                    "."
#define orxRESOURCE_KZ_TYPE_TAG_FILE                      "file"


/** Resource asynchronous operation callback function
 */
typedef void (orxFASTCALL *orxRESOURCE_OP_FUNCTION)(orxHANDLE _hResource, orxS64 _s64Size, void *_pBuffer, void *_pContext);



/** Resource handlers
 */
typedef const orxSTRING (orxFASTCALL *orxRESOURCE_FUNCTION_LOCATE)(const orxSTRING _zStorage, const orxSTRING _zName, orxBOOL _bRequireExistence);

typedef orxS64          (orxFASTCALL *orxRESOURCE_FUNCTION_GET_TIME)(const orxSTRING _zLocation);

typedef orxHANDLE       (orxFASTCALL *orxRESOURCE_FUNCTION_OPEN)(const orxSTRING _zLocation, orxBOOL _bEraseMode);

typedef void            (orxFASTCALL *orxRESOURCE_FUNCTION_CLOSE)(orxHANDLE _hResource);

typedef orxS64          (orxFASTCALL *orxRESOURCE_FUNCTION_GET_SIZE)(orxHANDLE _hResource);

typedef orxS64          (orxFASTCALL *orxRESOURCE_FUNCTION_SEEK)(orxHANDLE _hResource, orxS64 _s64Offset, orxSEEK_OFFSET_WHENCE _eWhence);

typedef orxS64          (orxFASTCALL *orxRESOURCE_FUNCTION_TELL)(orxHANDLE _hResource);

typedef orxS64          (orxFASTCALL *orxRESOURCE_FUNCTION_READ)(orxHANDLE _hResource, orxS64 _s64Size, void *_pBuffer);

typedef orxS64          (orxFASTCALL *orxRESOURCE_FUNCTION_WRITE)(orxHANDLE _hResource, orxS64 _s64Size, const void *_pBuffer);

typedef orxSTATUS       (orxFASTCALL *orxRESOURCE_FUNCTION_DELETE)(const orxSTRING _zLocation);


/** Resource type info
 */
typedef struct __orxRESOURCE_TYPE_INFO_t
{
  const orxSTRING               zTag;                     /**< Unique tag, mandatory */
  orxRESOURCE_FUNCTION_LOCATE   pfnLocate;                /**< Locate function, mandatory */
  orxRESOURCE_FUNCTION_GET_TIME pfnGetTime;               /**< GetTime function, optional, for hotload support */
  orxRESOURCE_FUNCTION_OPEN     pfnOpen;                  /**< Open function, mandatory */
  orxRESOURCE_FUNCTION_CLOSE    pfnClose;                 /**< Close function, mandatory */
  orxRESOURCE_FUNCTION_GET_SIZE pfnGetSize;               /**< GetSize function, mandatory */
  orxRESOURCE_FUNCTION_SEEK     pfnSeek;                  /**< Seek function, mandatory */
  orxRESOURCE_FUNCTION_TELL     pfnTell;                  /**< Tell function, mandatory */
  orxRESOURCE_FUNCTION_READ     pfnRead;                  /**< Read function, mandatory */
  orxRESOURCE_FUNCTION_WRITE    pfnWrite;                 /**< Write function, optional, for write support */
  orxRESOURCE_FUNCTION_DELETE   pfnDelete;                /**< Delete function, optional, for deletion support */

} orxRESOURCE_TYPE_INFO;


/** Event enum
 */
typedef enum __orxRESOURCE_EVENT_t
{
  orxRESOURCE_EVENT_UPDATE = 0,
  orxRESOURCE_EVENT_ADD,
  orxRESOURCE_EVENT_REMOVE,

  orxRESOURCE_EVENT_NUMBER,

  orxRESOURCE_EVENT_NONE = orxENUM_NONE

} orxRESOURCE_EVENT;


/** Event payload
 */
typedef struct __orxRESOURCE_EVENT_PAYLOAD_t
{
  orxS64                        s64Time;                  /**< New resource time : 8 */
  const orxSTRING               zLocation;                /**< Resource location : 12 / 16 */
  const orxRESOURCE_TYPE_INFO  *pstTypeInfo;              /**< Type info : 16 / 24 */
  orxSTRINGID                   stGroupID;                /**< Group ID : 20 / 28 */
  orxSTRINGID                   stNameID;                 /**< Name ID : 24 / 32 */

} orxRESOURCE_EVENT_PAYLOAD;



/** Resource module setup
 */
extern orxDLLAPI void orxFASTCALL                         orxResource_Setup();


/** Inits the resource module
 * @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL                    orxResource_Init();


/** Exits from the resource module
 */
extern orxDLLAPI void orxFASTCALL                         orxResource_Exit();



/** Gets number of resource groups
 * @return Number of resource groups
 */
extern orxDLLAPI orxU32 orxFASTCALL                       orxResource_GetGroupCount();


/** Gets resource group at given index
 * @param[in] _u32Index         Index of resource group
 * @return Resource group if index is valid, orxNULL otherwise
 */
extern orxDLLAPI const orxSTRING orxFASTCALL              orxResource_GetGroup(orxU32 _u32Index);



/** Adds a storage for a given resource group
 * @param[in] _zGroup           Concerned resource group
 * @param[in] _zStorage         Description of the storage, as understood by one of the resource type
 * @param[in] _bAddFirst        If true this storage will be used *before* any already added ones, otherwise it'll be used *after* all those
 * @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL                    orxResource_AddStorage(const orxSTRING _zGroup, const orxSTRING _zStorage, orxBOOL _bAddFirst);


/** Removes a storage for a given resource group
 * @param[in] _zGroup           Concerned resource group
 * @param[in] _zStorage         Concerned storage
 * @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL                    orxResource_RemoveStorage(const orxSTRING _zGroup, const orxSTRING _zStorage);


/** Gets number of storages for a given resource group
 * @param[in] _zGroup           Concerned resource group
 * @return Number of storages for this resource group
 */
extern orxDLLAPI orxU32 orxFASTCALL                       orxResource_GetStorageCount(const orxSTRING _zGroup);


/** Gets storage at given index for a given resource group
 * @param[in] _zGroup           Concerned resource group
 * @param[in] _u32Index         Index of storage
 * @return Storage if index is valid, orxNULL otherwise
 */
extern orxDLLAPI const orxSTRING orxFASTCALL              orxResource_GetStorage(const orxSTRING _zGroup, orxU32 _u32Index);


/** Reloads storage from config
 * @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL                    orxResource_ReloadStorage();



/** Gets the location of an *existing* resource for a given group, location gets cached if found
 * @param[in] _zGroup           Concerned resource group
 * @param[in] _zName            Name of the resource to locate
 * @return Location string if found, orxNULL otherwise
 */
extern orxDLLAPI const orxSTRING orxFASTCALL              orxResource_Locate(const orxSTRING _zGroup, const orxSTRING _zName);


/** Gets the location for a resource (existing or not) in a *specific storage*, for a given group. The location doesn't get cached and thus needs to be copied by the caller before the next call
 * @param[in] _zGroup           Concerned resource group
 * @param[in] _zStorage         Concerned storage, if orxNULL then the highest priority storage will be used
 * @param[in] _zName            Name of the resource
 * @return Location string if found, orxNULL otherwise
 */
extern orxDLLAPI const orxSTRING orxFASTCALL              orxResource_LocateInStorage(const orxSTRING _zGroup, const orxSTRING _zStorage, const orxSTRING _zName);


/** Gets the resource path from a location
 * @param[in] _zLocation        Location of the concerned resource
 * @return Path string if valid, orxSTRING_EMPTY otherwise
 */
extern orxDLLAPI const orxSTRING orxFASTCALL              orxResource_GetPath(const orxSTRING _zLocation);


/** Gets the resource type from a location
 * @param[in] _zLocation        Location of the concerned resource
 * @return orxRESOURCE_TYPE_INFO if valid, orxNULL otherwise
 */
extern orxDLLAPI const orxRESOURCE_TYPE_INFO *orxFASTCALL orxResource_GetType(const orxSTRING _zLocation);



/** Gets the time of last modification of a resource
 * @param[in] _zLocation        Location of the concerned resource
 * @return Time of last modification, in seconds since epoch, if found, 0 otherwise
 */
extern orxDLLAPI orxS64 orxFASTCALL                       orxResource_GetTime(const orxSTRING _zLocation);


/** Opens the resource at the given location
 * @param[in] _zLocation        Location of the resource to open
 * @param[in] _bEraseMode       If true, the file will be erased if existing or created otherwise, if false, no content will get destroyed when opening
 * @return Handle to the open location, orxHANDLE_UNDEFINED otherwise
 */
extern orxDLLAPI orxHANDLE orxFASTCALL                    orxResource_Open(const orxSTRING _zLocation, orxBOOL _bEraseMode);


/** Closes a resource
 * @param[in] _hResource        Concerned resource
 */
extern orxDLLAPI void orxFASTCALL                         orxResource_Close(orxHANDLE _hResource);


/** Gets the literal location of a resource
 * @param[in] _hResource        Concerned resource
 * @return Literal location string
 */
extern orxDLLAPI const orxSTRING orxFASTCALL              orxResource_GetLocation(orxHANDLE _hResource);


/** Gets the size, in bytes, of a resource
 * @param[in] _hResource        Concerned resource
 * @return Size of the resource, in bytes
 */
extern orxDLLAPI orxS64 orxFASTCALL                       orxResource_GetSize(orxHANDLE _hResource);


/** Seeks a position in a given resource (moves cursor)
 * @param[in] _hResource        Concerned resource
 * @param[in] _s64Offset        Number of bytes to offset from 'origin'
 * @param[in] _eWhence          Starting point for the offset computation (start, current position or end)
 * @return Absolute cursor position
 */
extern orxDLLAPI orxS64 orxFASTCALL                       orxResource_Seek(orxHANDLE _hResource, orxS64 _s64Offset, orxSEEK_OFFSET_WHENCE _eWhence);


/** Tells the position of the cursor in a given resource
 * @param[in] _hResource        Concerned resource
 * @return Position (offset), in bytes
 */
extern orxDLLAPI orxS64 orxFASTCALL                       orxResource_Tell(orxHANDLE _hResource);