headers/base/orxType.h


  typedef void *                  orxHANDLE;

  typedef unsigned  int           orxU32;


  typedef unsigned  int           orxBOOL;

  typedef unsigned  long          orxU32;


  typedef unsigned  long          orxBOOL;
  typedef orxU32                  orxSTRINGID;

  #define orxENUM_NONE            0xFFFFFFFF

    typedef signed    long long   orxS64;

    typedef signed    long long   orxS64;

    typedef signed    __int64     orxS64;

    typedef void *                orxHANDLE;

    typedef unsigned  int         orxU32;


    typedef signed    long long   orxS64;


    typedef unsigned  int         orxBOOL;

    typedef unsigned  long        orxU32;


    typedef signed    long long   orxS64;


    typedef unsigned  long        orxBOOL;
    typedef orxU32                orxSTRINGID;

    #define orxENUM_NONE          0xFFFFFFFF

/* *** Misc constants *** */

/* *** Seek offset constants *** */
typedef enum __orxSEEK_OFFSET_WHENCE_t
{
  orxSEEK_OFFSET_WHENCE_START = 0,
  orxSEEK_OFFSET_WHENCE_CURRENT,
  orxSEEK_OFFSET_WHENCE_END,

  orxSEEK_OFFSET_WHENCE_NUMBER,

  orxSEEK_OFFSET_WHENCE_NONE = orxENUM_NONE

} orxSEEK_OFFSET_WHENCE;

static const orxU32               orxU32_UNDEFINED      = (orxU32)(-1);

static const orxHANDLE            orxHANDLE_UNDEFINED   = (orxHANDLE)(-1);

static const orxSTRINGID          orxSTRINGID_UNDEFINED = (orxSTRINGID)(-1);



/* *** String & character constants *** */
extern orxDLLAPI const orxSTRING  orxSTRING_EMPTY;


/* *** Status defines *** */
typedef enum __orxSTATUS_t
{
  orxSTATUS_FAILURE = 0,          /**< Failure status, the operation has failed */
  orxSTATUS_SUCCESS,              /**< Success status, the operation has worked has expected */

  orxSTATUS_NUMBER,               /**< Sentinel : Number of status */

  orxSTATUS_NONE = orxENUM_NONE   /**< Invalid status */

} orxSTATUS;